--- a/footer.html
+++ b/footer.html
@@ -1,59 +1,5 @@
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>কমপ্যাক্ট ফুটার (ড্রপডাউন সহ)</title>
-    <!-- প্রয়োজনীয় CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css"> <!-- আপনার কাস্টম স্টাইলশীট -->
-    <style>
-        /* কাস্টম ব্র্যান্ড কালার */
-        :root {
-            --lipshine-color: #E52E71; /* Example color */
-            --lipshine-dark-color: #C41E5B; /* Example darker shade */
-        }
-        .text-lipshine { color: var(--lipshine-color); }
-        .bg-lipshine { background-color: var(--lipshine-color); }
-        .border-lipshine { border-color: var(--lipshine-color); }
-        .hover\:bg-lipshine-dark:hover { background-color: var(--lipshine-dark-color); }
-        .focus\:ring-lipshine:focus { --tw-ring-color: var(--lipshine-color); box-shadow: 0 0 0 2px rgba(229, 46, 113, 0.4); }
-        .ring-lipshine { --tw-ring-color: var(--lipshine-color); }
-
-        /* ফুটার স্পেসিফিক স্টাইল */
-        footer a:not(.social-icon-link):not(.dev-link) { transition: color 0.2s ease-in-out; }
-        footer a:not(.social-icon-link):not(.dev-link):hover { color: var(--lipshine-color); }
-        #newsletterEmail:focus { border-color: var(--lipshine-color); }
-        #scrollToTopBtn { transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, transform 0.2s ease-in-out; }
-        #scrollToTopBtn:hover { transform: scale(1.1); }
-        footer a { text-decoration: none; }
-        footer ul { list-style: none; padding: 0; margin: 0; }
-
-        /* Collapsible Menu Styles */
-        .footer-menu-toggle {
-            display: flex; justify-content: space-between; align-items: center; width: 100%; text-align: left; background: none; border: none;
-            border-bottom: 1px solid rgba(107, 114, 128, 0.3); padding-bottom: 0.5rem; cursor: pointer; color: white;
-        }
-        @media (min-width: 768px) { /* md breakpoint */
-            .footer-menu-toggle { cursor: default; pointer-events: none; border-bottom: 1px solid rgba(107, 114, 128, 0.3); }
-            .footer-menu-toggle i { display: none; } /* Hide icon on desktop */
-        }
-        .footer-menu-toggle h4 { margin-bottom: 0; padding-bottom: 0; border: none; font-size: 1rem; font-weight: 600; }
-        .footer-menu-content { overflow: hidden; transition: max-height 0.5s ease-out, opacity 0.5s ease-out; max-height: 0; opacity: 0; }
-        .footer-menu-content.open { max-height: 500px; opacity: 1; margin-top: 0.75rem; }
-        @media (min-width: 768px) { /* md breakpoint */
-            .footer-menu-content { max-height: none !important; opacity: 1 !important; margin-top: 0.75rem !important; display: block !important; }
-        }
-        /* Icon styles */
-        .footer-menu-toggle i { transition: transform 0.3s ease-out; }
-        .footer-menu-toggle[aria-expanded="true"] i { transform: rotate(180deg); }
-    </style>
-</head>
-<body class="flex flex-col min-h-screen">
-
-
-    <!-- Footer Section Start -->
-    <footer style="background-color: #F4A7B9;" class="text-gray-800 py-10">
+    <!-- Footer Section Start -->    <footer style="background-color: #F4A7B9;" class="text-gray-800 py-10">
         <div class="container mx-auto px-4 max-w-6xl">
 
             <!-- Top Row: Brand Info & Social Links -->
@@ -120,98 +66,3 @@
     </footer>
     <!-- Footer Section End -->
 
-
-    <!-- ফুটারের জন্য স্ক্রিপ্ট -->
-    <script>
-        (function() { // Wrap in IIFE
-            // Set Current Year
-            const currentYearElem = document.getElementById('currentYear');
-            if (currentYearElem) currentYearElem.textContent = new Date().getFullYear();
-
-            // Newsletter Form Handling
-            const newsletterForm = document.getElementById('newsletterForm');
-            if (newsletterForm) {
-                 const emailInput = newsletterForm.querySelector('#newsletterEmail');
-                 const submitBtn = newsletterForm.querySelector('button[type="submit"]');
-                 const messageDiv = document.getElementById('newsletterMessage');
-                 const buttonText = submitBtn ? submitBtn.querySelector('.button-text') : null;
-
-                 newsletterForm.addEventListener('submit', function(e) {
-                    e.preventDefault(); const email = emailInput.value.trim();
-                    if (email && /\S+@\S+\.\S+/.test(email)) {
-                        if (submitBtn) submitBtn.disabled = true; if (buttonText) buttonText.classList.add('hidden'); messageDiv.textContent = '';
-                        setTimeout(() => {
-                            const isSuccess = Math.random() > 0.2;
-                            messageDiv.textContent = isSuccess ? 'ধন্যবাদ! সাবস্ক্রিপশন সফল হয়েছে।' : 'সাবস্ক্রাইব করতে সমস্যা হয়েছে।';
-                            messageDiv.className = `text-xs mt-2 h-4 ${isSuccess ? 'text-green-400' : 'text-red-400'}`;
-                            if (isSuccess) newsletterForm.reset();
-                            if (submitBtn) submitBtn.disabled = false; if (buttonText) buttonText.classList.remove('hidden');
-                            setTimeout(() => { messageDiv.textContent = ''; }, 5000);
-                        }, 1200);
-                    } else { messageDiv.textContent = 'সঠিক ইমেইল ঠিকানা দিন।'; messageDiv.className = 'text-xs mt-2 h-4 text-red-400'; setTimeout(() => { messageDiv.textContent = ''; }, 3000); } });
-            }
-
-            // Scroll to Top Button Logic
-            const scrollToTopBtn = document.getElementById('scrollToTopBtn');
-            if (scrollToTopBtn) {
-                let isVisible = false; const checkScroll = () => { const shouldBeVisible = window.pageYOffset > 400; if (shouldBeVisible !== isVisible) { isVisible = shouldBeVisible; scrollToTopBtn.classList.toggle('opacity-0', !isVisible); scrollToTopBtn.classList.toggle('invisible', !isVisible); scrollToTopBtn.classList.toggle('opacity-100', isVisible); scrollToTopBtn.classList.toggle('visible', isVisible); } };
-                window.addEventListener('scroll', checkScroll, { passive: true });
-                scrollToTopBtn.addEventListener('click', () => { window.scrollTo({ top: 0, behavior: 'smooth' }); });
-                checkScroll();
-            }
-
-            // Footer Menu Toggle Logic
-            function toggleFooterMenu(button) {
-                const content = button.nextElementSibling; const icon = button.querySelector('i'); const isOpen = content.classList.contains('open');
-                button.setAttribute('aria-expanded', !isOpen); content.classList.toggle('open');
-                if (isOpen) { // Closing
-                     content.style.maxHeight = '0'; content.style.opacity = '0';
-                     if(icon) icon.classList.remove('rotate-180');
-                 } else { // Opening
-                     content.style.maxHeight = content.scrollHeight + "px"; // Set max-height for transition
-                     content.style.opacity = '1';
-                     if(icon) icon.classList.add('rotate-180');
-                 }
-            }
-
-            // Add event listeners to all toggle buttons
-            const toggleButtons = document.querySelectorAll('.footer-menu-toggle');
-            toggleButtons.forEach(button => {
-                button.addEventListener('click', () => { if (window.innerWidth < 768) toggleFooterMenu(button); }); // Only toggle on mobile
-                // Initial state check for desktop
-                if (window.innerWidth >= 768) {
-                     const content = button.nextElementSibling;
-                     content.classList.add('open'); content.style.maxHeight = 'none'; content.style.opacity = '1'; button.setAttribute('aria-expanded', 'true');
-                 }
-            });
-
-            // Adjust on resize (optional but good practice)
-            let resizeTimeout;
-            window.addEventListener('resize', () => {
-                 clearTimeout(resizeTimeout);
-                 resizeTimeout = setTimeout(() => {
-                     toggleButtons.forEach(button => {
-                         const content = button.nextElementSibling;
-                         const icon = button.querySelector('i');
-                         if (window.innerWidth >= 768) {
-                              content.classList.add('open'); content.style.maxHeight = 'none'; content.style.opacity = '1'; button.setAttribute('aria-expanded', 'true');
-                              if(icon) icon.classList.remove('rotate-180');
-                          } else {
-                              // If it was open on desktop, close it on mobile unless explicitly opened by click
-                              if(content.classList.contains('open') && button.getAttribute('aria-expanded') === 'true' && !button.dataset.mobileOpen ) {
-                                   content.classList.remove('open'); content.style.maxHeight = '0'; content.style.opacity = '0'; button.setAttribute('aria-expanded', 'false');
-                                   if(icon) icon.classList.remove('rotate-180');
-                              } else if (!content.classList.contains('open')) {
-                                   content.style.maxHeight = '0'; content.style.opacity = '0'; button.setAttribute('aria-expanded', 'false');
-                                    if(icon) icon.classList.remove('rotate-180');
-                              }
-                          }
-                     });
-                 }, 200);
-             });
-
-
-        })(); // End IIFE
-    </script>
-
-</body>
