--- a/order-form.html
+++ b/order-form.html
@@ -73,237 +73,6 @@
     <!-- ফুটার -->
     <div id="footer"></div>
 
-    <!-- Firebase এবং স্ক্রিপ্ট -->
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
-        import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-auth.js";
-        import { getDatabase, ref, get, set, runTransaction } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-database.js";
-
-        // --- OneSignal SDK Initialization (নতুন এবং নির্ভরযোগ্য কোড) ---
-        window.OneSignal = window.OneSignal || [];
-        OneSignal.push(function() {
-            OneSignal.init({
-                appId: "abd0b6b7-b1ce-487f-a877-eb07fce647cb",
-                allowLocalhostAsSecureOrigin: true,
-                logLevel: 'trace' // <-- ডিবাগিং এর জন্য এই লাইনটি যোগ করা হয়েছে
-            });
-
-            // এই কোডটি নিশ্চিত করবে যে ইউজারকে সাবস্ক্রাইব করার জন্য প্রম্পট দেখানো হবে
-            OneSignal.isPushNotificationsEnabled(function(isEnabled) {
-                if (!isEnabled) {
-                    console.log("Push notifications are not enabled. Showing prompt.");
-                    OneSignal.showSlidedownPrompt();
-                } else {
-                    console.log("Push notifications are already enabled.");
-                }
-            });
-        });
-
-        const firebaseConfig = {
-            apiKey: "AIzaSyCVSzQS1c7H4BLhsDF_fW8wnqUN4B35LPA",
-            authDomain: "nahid-6714.firebaseapp.com",
-            databaseURL: "https://nahid-6714-default-rtdb.asia-southeast1.firebasedatabase.app",
-            projectId: "nahid-6714",
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const database = getDatabase(app);
-
-        let checkoutCart = [];
-        let isBuyNowMode = false;
-
-        // --- Helper Functions ---
-        const showToast = (message, type = "success") => {
-            const toast = document.createElement("div");
-            toast.className = `fixed bottom-24 right-4 ${type === 'success' ? 'bg-green-500' : 'bg-red-500'} text-white px-4 py-3 rounded-lg shadow-lg z-50`;
-            toast.textContent = message;
-            document.body.appendChild(toast);
-            setTimeout(() => toast.remove(), 3000);
-        };
-
-        const getOneSignalPlayerId = () => {
-            return new Promise((resolve) => {
-                OneSignal.push(function() {
-                    OneSignal.getUserId(function(playerId) {
-                        console.log("SUCCESS: Retrieved OneSignal Player ID ->", playerId);
-                        resolve(playerId);
-                    });
-                });
-            });
-        };
-
-        const sendTelegramNotification = async (orderData) => {
-            try {
-                await fetch('/.netlify/functions/telegram_notifier', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(orderData)
-                });
-            } catch (error) { console.error("Telegram notification failed:", error); }
-        };
-
-        const calculateAndDisplayPrices = () => {
-            const subTotal = checkoutCart.reduce((sum, item) => sum + (item.price * item.quantity), 0);
-            const isOutside = document.querySelector('input[name="deliveryLocation"]:checked')?.value === 'outsideDhaka';
-            const deliveryFee = isOutside ? 160 : 70;
-            document.getElementById('subTotalDisplay').textContent = `${subTotal.toFixed(2)} টাকা`;
-            document.getElementById('deliveryFeeDisplay').textContent = `${deliveryFee.toFixed(2)} টাকা`;
-            document.getElementById('totalAmountDisplay').textContent = `${(subTotal + deliveryFee).toFixed(2)} টাকা`;
-        };
-
-        const renderCheckoutItems = () => {
-            const container = document.getElementById('checkoutItems');
-            const submitBtn = document.getElementById('submitButton');
-            if (!container || !submitBtn) return;
-            container.innerHTML = '';
-            if (!checkoutCart || checkoutCart.length === 0) {
-                container.innerHTML = '<p class="text-center text-red-500 p-4">আপনার কার্ট খালি।</p>';
-                submitBtn.disabled = true;
-                return;
-            }
-            checkoutCart.forEach(item => {
-                container.innerHTML += `<div class="flex items-center gap-4"><img src="${item.image || 'https://via.placeholder.com/64'}" alt="${item.name}" class="w-16 h-16 object-cover rounded-md"><div class="flex-grow"><p class="font-semibold">${item.name}</p><p class="text-sm text-gray-600">${item.quantity} x ${parseFloat(item.price).toFixed(2)} টাকা</p></div><p class="font-semibold">${(item.price * item.quantity).toFixed(2)} টাকা</p></div>`;
-            });
-            submitBtn.disabled = false;
-        };
-
-        const fetchUserProfile = async (uid) => {
-            const profile = (await get(ref(database, `users/${uid}/profile`))).val();
-            if (profile) {
-                document.getElementById('customerName').value = profile.name || '';
-                document.getElementById('phoneNumber').value = profile.phone || '';
-                document.getElementById('address').value = profile.address || '';
-            }
-        };
-
-        const handleDeliveryLocationChange = () => {
-            const isOutside = document.querySelector('input[name="deliveryLocation"]:checked').value === 'outsideDhaka';
-            document.getElementById('outsideDhakaLocationGroup').classList.toggle('hidden', !isOutside);
-            document.getElementById('paymentNotice').classList.toggle('hidden', !isOutside);
-            document.getElementById('deliveryPaymentGroup').classList.toggle('hidden', !isOutside);
-            document.getElementById('outsideDhakaLocation').required = isOutside;
-            document.getElementById('deliveryPaymentMethod').required = isOutside;
-            handleDeliveryPaymentMethodChange();
-            calculateAndDisplayPrices();
-        };
-
-        const handleDeliveryPaymentMethodChange = () => {
-            const isOutside = document.querySelector('input[name="deliveryLocation"]:checked').value === 'outsideDhaka';
-            const method = document.getElementById('deliveryPaymentMethod').value;
-            const showFields = isOutside && !!method;
-            document.getElementById('paymentNumberGroup').classList.toggle('hidden', !showFields);
-            document.getElementById('transactionIdGroup').classList.toggle('hidden', !showFields);
-            document.getElementById('paymentNumber').required = showFields;
-            document.getElementById('transactionId').required = showFields;
-        };
-
-        const placeOrder = async (event) => {
-            event.preventDefault();
-            const submitButton = document.getElementById('submitButton');
-            submitButton.disabled = true;
-            submitButton.innerHTML = '<i class="fas fa-spinner fa-spin mr-2"></i>অর্ডার হচ্ছে...';
-
-            try {
-                if (checkoutCart.length === 0) throw new Error("কার্ট খালি।");
-
-                const oneSignalPlayerId = await getOneSignalPlayerId();
-
-                const isOutside = document.querySelector('input[name="deliveryLocation"]:checked').value === 'outsideDhaka';
-                const subTotal = checkoutCart.reduce((sum, item) => sum + parseFloat(item.price) * item.quantity, 0);
-                const deliveryFee = isOutside ? 160 : 70;
-
-                const date = new Date();
-                const dateString = `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`;
-                const counterRef = ref(database, `counters/${dateString}`);
-                const result = await runTransaction(counterRef, (data) => (data || 0) + 1);
-                if (!result.committed) throw new Error("Order ID তৈরি করা যায়নি।");
-
-                const orderNumber = String(result.snapshot.val()).padStart(3, '0');
-                const orderId = `${date.getFullYear().toString().slice(-2)}${String(date.getDate()).padStart(2, '0')}${date.getMonth() + 1}${orderNumber}`;
-
-                const orderData = {
-                    orderId,
-                    customerName: document.getElementById('customerName').value.trim(),
-                    phoneNumber: document.getElementById('phoneNumber').value.trim(),
-                    address: document.getElementById('address').value.trim(),
-                    deliveryLocation: isOutside ? 'ঢাকার বাইরে' : 'ঢাকার ভেতরে',
-                    deliveryFee,
-                    totalAmount: (subTotal + deliveryFee).toFixed(2),
-                    cartItems: checkoutCart,
-                    orderDate: date.toISOString(),
-                    status: 'processing',
-                    userId: auth.currentUser ? auth.currentUser.uid : 'guest_user',
-                    userEmail: auth.currentUser ? auth.currentUser.email : 'guest_order',
-                    oneSignalPlayerId: oneSignalPlayerId,
-                    deliveryNote: document.getElementById('deliveryNote').value.trim() || 'N/A',
-                    outsideDhakaLocation: isOutside ? document.getElementById('outsideDhakaLocation').value : 'N/A',
-                    paymentNumber: isOutside ? document.getElementById('paymentNumber').value : 'N/A',
-                    transactionId: isOutside ? document.getElementById('transactionId').value : 'N/A',
-                };
-
-                await set(ref(database, 'orders/' + orderId), orderData);
-
-                if (auth.currentUser) {
-                    await set(ref(database, `users/${auth.currentUser.uid}/orderHistory/${orderId}`), true);
-                } else {
-                    const myOrders = JSON.parse(localStorage.getItem('myOrders')) || [];
-                    myOrders.push(orderId);
-                    localStorage.setItem('myOrders', JSON.stringify(myOrders));
-                }
-
-                if (!isBuyNowMode) {
-                    localStorage.removeItem('anyBeautyCart');
-                    if(auth.currentUser) await set(ref(database, `carts/${auth.currentUser.uid}`), []);
-                }
-
-                await sendTelegramNotification(orderData);
-                window.location.href = `order-track.html?orderId=${orderId}`;
-
-            } catch (error) {
-                showToast(`অর্ডার করতে সমস্যা হয়েছে: ${error.message}`, "error");
-                submitButton.disabled = false;
-                submitButton.innerHTML = 'অর্ডার কনফার্ম করুন';
-            }
-        };
-
-        // --- Page Initialization ---
-        document.addEventListener("DOMContentLoaded", async () => {
-            try {
-                const [headerRes, footerRes] = await Promise.all([fetch('header.html'), fetch('footer.html')]);
-                document.getElementById('header').innerHTML = await headerRes.text();
-                document.getElementById('footer').innerHTML = await footerRes.text();
-            } catch(e) { console.error("Layout failed to load", e); }
-
-            onAuthStateChanged(auth, async (user) => {
-                document.getElementById('loadingIndicator').style.display = 'none';
-                document.getElementById('checkoutForm').classList.remove('hidden');
-
-                const urlParams = new URLSearchParams(window.location.search);
-                const urlCartData = urlParams.get('cart');
-                isBuyNowMode = !!urlCartData;
-
-                if (isBuyNowMode) {
-                    checkoutCart = JSON.parse(decodeURIComponent(urlCartData));
-                } else {
-                    if(user) {
-                        const cartSnapshot = await get(ref(database, `carts/${user.uid}`));
-                        checkoutCart = cartSnapshot.val() || [];
-                    } else {
-                        checkoutCart = JSON.parse(localStorage.getItem('anyBeautyCart') || '[]');
-                    }
-                }
-
-                renderCheckoutItems();
-                calculateAndDisplayPrices();
-                if (user) await fetchUserProfile(user.uid);
-
-                document.getElementById('checkoutForm').addEventListener('submit', placeOrder);
-                document.querySelectorAll('input[name="deliveryLocation"]').forEach(radio => radio.addEventListener('change', handleDeliveryLocationChange));
-                document.getElementById('deliveryPaymentMethod')?.addEventListener('change', handleDeliveryPaymentMethodChange);
-                handleDeliveryLocationChange();
-            });
-        });
-    </script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
