--- a/product-detail.html
+++ b/product-detail.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>প্রোডাক্ট বিস্তারিত</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script type="module" src="js/main.js"></script> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <script type="module" src="script.js"></script> 
     <style>
         .text-lipstick { color: #A52A2A; }
         .bg-background { background-color: #FFF5F7; }
