--- a/order-track.html
+++ b/order-track.html
@@ -215,5 +215,7 @@
         function getStatusText(status) { const s = { processing: 'প্রসেসিং', confirmed: 'কনফার্মড', packaging: 'প্যাকেজিং', shipped: 'ডেলিভারি হয়েছে', delivered: 'সম্পন্ন হয়েছে' }; return s[status] || 'প্রসেসিং'; }
         function getStatusColor(status) { const c = { processing: 'bg-yellow-100 text-yellow-800', confirmed: 'bg-blue-100 text-blue-800', packaging: 'bg-purple-100 text-purple-800', shipped: 'bg-cyan-100 text-cyan-800', delivered: 'bg-green-100 text-green-800' }; return c[status] || c.processing; }
     </script>
+
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
