--- a/product-detail.html
+++ b/product-detail.html
@@ -31,9 +31,16 @@
         #modalPrevBtn, #modalNextBtn { position: absolute; top: 50%; transform: translateY(-50%); color: white; font-size: 30px; cursor: pointer; padding: 10px; }
         #modalPrevBtn { left: 20px; }
         #modalNextBtn { right: 20px; }
+
+        /* রিলেটেড প্রোডাক্ট স্টাইল */
+        .related-product-card {
+            transition: all 0.3s ease;
+        }
+        .related-product-card:hover {
+            transform: translateY(-5px);
+        }
     </style>
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-
 </head>
 <body>
     <!-- Global Loading Spinner -->
@@ -45,7 +52,7 @@
         </div>
     </div>
     <div id="header"></div>
-    <main class="p-4 pt-24 md:pt-28 max-w-4xl mx-auto"> 
+    <main class="p-4 pt-24 md:pt-28 max-w-6xl mx-auto"> 
         <div id="loadingSpinner" class="text-center p-10">
             <div class="animate-spin inline-block w-8 h-8 border-4 rounded-full border-t-lipstick" role="status">
                 <span class="visually-hidden"></span>
@@ -54,27 +61,35 @@
         </div>
 
         <div id="productContent" class="hidden">
-            <div class="image-gallery">
-                <div class="main-image-container">
-                    <img id="mainImage" src="https://via.placeholder.com/500x400.png?text=Loading..." alt="Main Product Image">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mb-12">
+                <div class="image-gallery">
+                    <div class="main-image-container">
+                        <img id="mainImage" src="https://via.placeholder.com/500x400.png?text=Loading..." alt="Main Product Image">
+                    </div>
+                    <div class="thumbnail-container" id="thumbnailContainer"></div>
                 </div>
-                <div class="thumbnail-container" id="thumbnailContainer"></div>
+                <div class="product-info">
+                    <h1 id="productTitle" class="text-2xl lg:text-3xl font-bold mb-4 text-gray-800">প্রোডাক্ট</h1>
+                    <p id="productPrice" class="text-lipstick text-xl lg:text-2xl font-bold mb-4">দাম</p>
+                    <div id="productDetailsExtra" class="mb-6"></div>
+                    <p id="productDescription" class="text-gray-700 mb-6 leading-relaxed">বিবরণ</p>
+                    
+                    <div id="actionButtons" class="flex flex-col sm:flex-row gap-3 mb-8">
+                        <!-- Action buttons will be loaded here -->
+                    </div>
+                </div>
             </div>
-            <h1 id="productTitle" class="text-2xl lg:text-3xl font-bold mb-4 text-gray-800">প্রোডাক্ট</h1>
-            <p id="productPrice" class="text-lipstick text-xl lg:text-2xl font-bold mb-4">দাম</p>
-            <div id="productDetailsExtra" class="mb-6"></div>
-            <p id="productDescription" class="text-gray-700 mb-6 leading-relaxed">বিবরণ</p>
-            
-            <div id="actionButtons" class="flex flex-col sm:flex-row space-y-3 sm:space-y-0 sm:space-x-4">
-                </div>
         </div>
-        <section id="relatedProductsSection" class="mt-8 hidden">
-            <h2 class="text-2xl font-bold text-center mb-4 text-lipstick-dark">Related Products</h2>
+
+        <!-- রিলেটেড প্রোডাক্ট সেকশন -->
+        <section id="relatedProductsSection" class="mt-12 hidden">
+            <h2 class="text-2xl font-bold text-center mb-8 text-lipstick-dark border-b pb-2">সম্পর্কিত প্রোডাক্ট</h2>
             <div id="relatedProductsContainer" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
                 <!-- Related products will be loaded here -->
             </div>
         </section>
     </main>
+
     <div id="place-order-bar" class="fixed bottom-0 left-0 w-full bg-white p-3 shadow-lg z-40 hidden" style="box-shadow: 0 -2px 10px rgba(0,0,0,0.1);">
         <div class="flex justify-between items-center">
             <div>
@@ -92,6 +107,5 @@
         <img id="modalImage" src="" alt="Full Screen Product Image">
         <span id="modalNextBtn" title="পরবর্তী ছবি"><i class="fas fa-chevron-right"></i></span>
     </div>
-
 </body>
 </html>
