--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <!-- Global Social Media Buttons for index.html -->
 
 <!-- Loading System -->
-<script src="js/loading-system.js"></script>
+<script src="loading-system.js"></script>
     <script type="module" src="js/main.js"></script>
 
 
