--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     </div>
 
     <!-- Loading System -->
-    <script src="loading-system.js"></script>
+    <script src="js.loading-system.js"></script>
     <script type="module" src="js/main.js"></script>
 
 </body>
