--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Any's Beauty Corner</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
+    <script src="loading-system.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -27,14 +28,9 @@
     </script>
 </head>
 <body>
-    <!-- Global Loading Spinner -->
-    <div id="global-loading-spinner">
-        <div class="spinner-dots">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </div>
+
+    <div id="website-content" style="display: none;">
+
     <div id="header"></div>
 
     <!-- মোবাইল সার্চ বার -->
@@ -184,6 +180,7 @@
     <!-- Global Social Media Buttons for index.html -->
 
 
+    </div>
     <script type="module" src="js/main.js"></script>
 
 
