--- a/header.html
+++ b/header.html
@@ -67,32 +67,32 @@
                         <i class="fas fa-times"></i>
                     </button>
                     <ul class="mt-4 flex-1 overflow-y-auto">
-                        <li id="mobileLoginButton" class="border-b border-gray-200 py-2">
-                                <button class="flex items-center w-full text-gray-800 hover:bg-gray-100" onclick="window.loginWithGmail()">
+                        <li id="mobileLoginButton" class="py-3 border-b border-gray-200">
+                                <button class="flex items-center w-full text-gray-800" onclick="window.loginWithGmail()">
                                 <i class="fas fa-user-circle mr-2"></i>
                                 <span>লগইন</span>
                             </button>
                         </li>
-                        <li class="border-b border-gray-200 py-2">
-                            <a class="block text-gray-800 hover:bg-gray-100" href="index.html#home" onclick="handleMenuItemClick()">হোম</a>
+                        <li class="py-3 border-b border-gray-200">
+                            <a class="block text-gray-800" href="index.html#home" onclick="handleMenuItemClick()">হোম</a>
                         </li>
 
-                        <li class="border-b border-gray-200 py-2">
-                            <button class="flex items-center justify-between w-full text-left text-gray-800 hover:bg-gray-100" onclick="toggleSubMenuMobile(event)">
+                        <li class="py-3 border-b border-gray-200">
+                            <button class="flex items-center justify-between w-full text-left text-gray-800" onclick="toggleSubMenuMobile(event)">
                                 <span>পণ্য সমূহ</span>
                                 <i class="fas fa-chevron-down ml-2 transition-transform duration-300" id="arrowIcon"></i>
                             </button>
                             <div class="hidden bg-white/5 backdrop-blur-sm rounded-lg mt-1 ml-4" id="subMenuMobile">
-                                <a class="block px-4 py-2 text-gray-800 hover:bg-gray-200 border-b border-gray-200" href="#all" onclick="handleSubMenuItemClick('all')">সকল প্রোডাক্ট</a>
-                                <a class="block px-4 py-2 text-gray-800 hover:bg-gray-200 border-b border-gray-200" href="#health" onclick="handleSubMenuItemClick('health')">স্বাস্থ্য</a>
-                                <a class="block px-4 py-2 text-gray-800 hover:bg-gray-200 border-b border-gray-200" href="#cosmetics" onclick="handleSubMenuItemClick('cosmetics')">মেকআপ</a>
-                                <a class="block px-4 py-2 text-gray-800 hover:bg-gray-200 border-b border-gray-200" href="#skincare" onclick="handleSubMenuItemClick('skincare')">স্কিনকেয়ার</a>
-                                <a class="block px-4 py-2 text-gray-800 hover:bg-gray-200 border-b border-gray-200" href="#haircare" onclick="handleSubMenuItemClick('haircare')">হেয়ারকেয়ার</a>
-                                <a class="block px-4 py-2 text-gray-800 hover:bg-gray-200" href="#mehandi" onclick="handleSubMenuItemClick('mehandi')">মেহেদী</a>
+                                <a class="block px-4 py-2 text-gray-800 border-b border-gray-200" href="#all" onclick="handleSubMenuItemClick('all')">সকল প্রোডাক্ট</a>
+                                <a class="block px-4 py-2 text-gray-800 border-b border-gray-200" href="#health" onclick="handleSubMenuItemClick('health')">স্বাস্থ্য</a>
+                                <a class="block px-4 py-2 text-gray-800 border-b border-gray-200" href="#cosmetics" onclick="handleSubMenuItemClick('cosmetics')">মেকআপ</a>
+                                <a class="block px-4 py-2 text-gray-800 border-b border-gray-200" href="#skincare" onclick="handleSubMenuItemClick('skincare')">স্কিনকেয়ার</a>
+                                <a class="block px-4 py-2 text-gray-800 border-b border-gray-200" href="#haircare" onclick="handleSubMenuItemClick('haircare')">হেয়ারকেয়ার</a>
+                                <a class="block px-4 py-2 text-gray-800" href="#mehandi" onclick="handleSubMenuItemClick('mehandi')">মেহেদী</a>
                             </div>
                         </li>
-                        <li class="py-2"> <!-- No bottom border for the last item -->
-                            <a id="mobileOrderTrackButton" class="block text-gray-800 hover:bg-gray-100" href="order-track.html" onclick="handleOrderTrackClick(event)">অর্ডার ট্র্যাক</a>
+                        <li class="py-3"> <!-- No bottom border for the last item -->
+                            <a id="mobileOrderTrackButton" class="block text-gray-800" href="order-track.html" onclick="handleOrderTrackClick(event)">অর্ডার ট্র্যাক</a>
                         </li>
                     </ul>
                 </div>
